# mcp_lab

./: .gitignore  01_mcp_host.ipynb  README.md  fastapi_mcp_server.py  main.py  pyproject.toml  requirements.txt  server.py
mcp_servers/: llama_rag.py  qwen_rag.py  rag.py  weather.py
routers/: arxiv.py  web.py  wiki.py
