[project]
name = "mcp-labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.1.3",
    "faiss-cpu>=1.10.0",
    "fastapi-mcp>=0.1.7",
    "fastapi[standard]>=0.115.12",
    "langchain-community>=0.3.21",
    "langchain-groq>=0.3.2",
    "langchain-mcp-adapters>=0.0.7",
    "langchain-ollama>=0.3.0",
    "langgraph>=0.3.25",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.0",
    "wikipedia>=1.4.0",
]
